udisks2: Fix handling of volumes with multiple mountpoints

Volume is not included currently if it has multiple mount points
and one of them is not considered as user interesting. Change this
logic and include all volumes with at least one user interesting
mount point.

https://bugzilla.gnome.org/show_bug.cgi?id=772306